--- a/css/styles.css
+++ b/css/styles.css
@@ -161,8 +161,16 @@ body {
   padding: 16px 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px; 
-
 }
+.form-field-textarea::placeholder{
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
 .form-field,
 .form-field-policy {
   width: 100%;
