--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  opacity: 1;
+  visibility: visible;
   background-color: rgba(15, 15, 15, 0.5);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
 }
@@ -52,18 +54,16 @@ body {
 }
 .backdrop.is-hidden .modal {
   transform: scale(0.5) translate(-50%, -50%);
-  opacity: 0;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: scale(1) translate(-50% , -50%);
-  opacity: 1;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -103,7 +103,6 @@ body {
   padding-right: 15px;
 }
 .form {
-  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
   width: 448px;
@@ -186,8 +185,9 @@ body {
   justify-content: center;
   margin-bottom: 30px;
 
-    font-size: 14px;
-    letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   cursor: pointer;
 }
 .form-field-icon{
@@ -250,8 +250,8 @@ body {
   display: block;
 }
 .checkbox-icon{
-  width: 16px;
-  height: 15px;
+  width: 11px;
+  height: 8px;
 }
 .policy-contract {
   margin-left: 5px;
@@ -485,14 +485,16 @@ body {
   
 }
 .feature-description {
-  display: flex;
+  
   position: absolute;
   bottom: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 70px;
-    /* padding-top: 27px; */
-  background: rgba(47, 48, 58, 0.8);
+    background: rgba(47, 48, 58, 0.8);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -501,10 +503,9 @@ body {
     text-transform: uppercase;
   
     color: var(--mail-font-color);
+
 }
-.feature-description p {
-  margin: auto;
-}
+
 .team {
   background-color: #F5F4FA;
 }
