--- a/css/styles.css
+++ b/css/styles.css
@@ -61,9 +61,7 @@ body {
   opacity: 0;
   pointer-events: none;
 }
-.backdrop.is-hidden .modal {
-  transform: scale(0.5) translate(-50%, -50%);
-}
+
 .modal {
   position: absolute;
   top: 50%;
@@ -119,6 +117,9 @@ body {
 .modal-form-field {
   margin-bottom: 10px;
 }
+.modal-form-field:nth-child(4n) {
+  margin-bottom: 20px; 
+}
 .modal-form-field-desc {
   display: block;
   margin-bottom: 4px;
@@ -161,6 +162,7 @@ body {
 }
 
 .modal-form-message {
+  display: block;
   width: 448px;
   height: 120px;
   padding: 12px 16px;
